--- a/css/subpage_m.css
+++ b/css/subpage_m.css
@@ -1,104 +1,221 @@
-* p span { color:red; font-weight:bold; }
 .container {
-    position:relative; top:0px;
-    min-height: calc(100vh - 220px);
-    padding-bottom:100px;
-    width:100%; min-width:1510px;
-    background:rgb(255, 253, 248);
-    /* background:rgb(75, 58, 20); 
-    color:white;*/
+    border:0px solid black;
+    min-width:100%;
 }
-
-/* 배경색 흰색 */
-.container-bg {
-    background:#fff;
-}
-
 .container .inner {
-    outline:0px solid red;
-    position:relative;
+    width:100%; 
+    display:block;
+}
+.container>.inner >h1,
+.container .inner .content .depth {
+    display:none;
+}
+.container> .inner> .snb {
+    width:68%; height:40px;
     margin:0 auto;
-    width:1480px; height:100%;
+    padding-top:50px;
+    padding-bottom:50px;
+    display:flex; justify-content: center;
+    position:relative; left:0; z-index:120;
+    border-radius:0;
+    background:none;
+}
+.container .inner .snb ul{
     display:flex;
 }
-
-/* snb 사이드 메뉴 공통*/
-.container .inner .snb { outline:0px solid green;
-    width:220px; height:300px;
-    margin-top:100px;
-    border-radius:10px;
-    background:#ebe2cf;
-    position:relative; left:-110px;
-}
-.container>.inner>h1 {
-    width:180px; height:40px;
-    position:relative; top:35px; left:80px;
-    font-size:1.6rem;
-}
-.container .inner .snb ul {
-    width:100%; height:100%;
-    position:relative;
- }
 .container .inner .snb ul li {
-    position:relative;
-    width:100%; height:40px; line-height:40px; 
-    text-indent:38px;
+    height:40px; line-height:40px; 
+    text-indent:0px; text-align:center;
     cursor:pointer;
     transition:height 0.8s;
     overflow:hidden;
- }
- .container .inner .snb ul li:after {
-    content:''; display:block; 
-    position:absolute; top:38px; left:0;
-    margin-left:10px;
-    width:80%; height:0px;
-    border-bottom:1px solid rgba(99, 55, 26, 0.2);
- }
- 
- .container .inner .snb ul li:first-child {
-     margin-top:20px;
- }
-.container .inner .snb ul li:hover { color: coral; }
-.container .inner .snb ul li:hover .snb-list-dep2 { color: black;}
-
+    border:1px solid coral;
+} 
+.container .inner .snb ul li:first-child {
+    margin-top:0px;
+}
+.container .inner .snb ul li:after {
+    border-bottom:none;
+}
 .container .inner .snb ul li .snb-list-dep2 { 
-    outline:0px solid blue;
     width: 100%; height: 40px;
     line-height:40px;
-    text-indent:48px;
+    text-indent:0px;
     background-color:#fff;
+    border-top:1px solid rgba(255, 127, 80, 0.2);
  }
- .container .inner .snb ul li:hover .snb-list-dep2:hover { color:coral; }
+
+/* 마켓오 네이쳐 그래놀라 */
+.container .inner .content .shelf .shelf-box {
+    grid-template-columns:repeat(3, 1fr);
+}
+.container .inner .content .shelf .shelf-box-txt {
+    grid-template-columns: repeat(3, 1fr); 
+}
 
 
-/* snb 사이드 메뉴 - 마켓오 */
-.container .inner .snb ul .snb-list-market:nth-child(2):hover { height:130px; }
-.container .inner .snb ul .snb-list-market:nth-child(3):hover { height:170px; }
-/* snb 사이드메뉴 - 닥터유 */
-.container .inner .snb ul .snb-list-dr:nth-child(2):hover { height:170px; }
-/* snb 사이드메뉴 - 회사소개 */
-.container .inner .snb ul .snb-list-orion:nth-child(1):hover { height:130px; }
 
 
-/* container 컨테이너 공통 */
-.container .inner .content { outline:0px solid blueviolet;
-    flex:90; height:100%;
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* 상단 메뉴 */
+.container .inner .content_m .topmenu_m {
+    width:100%;
+}
+.container .inner .content_m .topmenu_m h1 {
+    border:0px solid rgb(150, 148, 148);
+    text-align:center;
+    margin:20px 0;
+}
+.container .inner .content_m .topmenu_m .topmenu-list_m {
+    width:68%; height:45px;
+    margin:50px auto;
+    display:flex; justify-content: center;
+}
+.container .inner .content_m .topmenu_m .topmenu-list_m div {
+    border:1px solid coral;
+    flex:1;
+    height:100%; line-height:45px; text-align:center;
+    cursor:pointer;
+}
+.container .inner .content_m .topmenu_m .topmenu-list_m div:first-child {
+    background:coral; color:white;
+}
+
+/*              메인 컨텐츠            */
+.container .inner .content_m .main_m {
+    border:0px solid black;
+    width:100%;
+    position:absolute;
+    display:none;
+}
+.container .inner .content_m .main1_m {
+    display:block;
+}
+.container .inner .content_m .main_m img {
+    display:block;
+    position:relative; margin:0 auto;
+    margin-top:60px;
+    width:70%;
+}
+.container .inner .content_m .main_m .brand-cont {
+    border:2px solid red;
+}
+
+.container .inner .content_m .main2_m {
+  
+}
+/* 신제품 */
+.container .inner .content .product { 
+    grid:repeat(3, 1fr) / auto-flow;
+}
+/* 초코파이 하우스 */
+.container .inner .content .cont-chocopie .chocopie-detail img {
+    width:auto;
+    position:absolute; top:195px; left: 180px;
+}
+.container .inner .content .cont-chocopie .chocopie-detail .chocopie-img-detail {
+    margin-left:-120px;
+}
+.container .inner .content .cont-chocopie .chocopie-detail .chocopie-img-detail .chocopie-detail-list .img-pointer3 .detail-biscuit {
+    left:160px;
+}
+.container .inner .content .cont-chocopie .chocopie-detail .chocopie-img-detail .chocopie-detail-list .img-pointer4 .detail-snow {
+    left:150px;
+}
+
+/*                    마켓오 - 마켓오 네이쳐                      */
+.container .inner .content_m .main_m .shelf {
+    position:relative;
+    width:100%; height:1000px;
+}
+/* 진열된 그래놀라,그래놀라 바 이미지, 텍스트 */
+.container .inner .content_m .main_m .shelf .shelf-box {
+    margin:50px auto;
+    width:100%; 
+    display:grid;
+    grid:'. . .'; row-gap: 120px;
+    border:4px solid black;
+} 
+.container .inner .content_m .main_m .shelf .shelf-box img {
+    margin: 0 auto;
+}
+.container .inner .content_m .main_m .shelf .shelf-box .modal-btn {
+    transition:all 0.6s;
+    cursor:pointer;
+    position:relative; z-index:2; 
+}
+.container .inner .content_m .main_m .shelf .shelf-box .modal-btn:hover { /*호버*/
+    transform:scale(1.2) translatez(30px);
+}
+.container .inner .content_m .main_m .shelf .shelf-box-txt {
+    width:100%; height:600px;
+    position:absolute; z-index:1;
+    text-align:center;
+    display:grid; grid:'. . .';  row-gap: 270px;
+    cursor:pointer;
+}
+.container .inner .content_m .main_m .shelf .shelf-box-txt li{
+    /* float:left;  */
+    border:1px solid green;
+    grid:1; height:40px;
     position:relative;
 }
-.container> .inner> .content> h2, p {
-    padding-top:35px;
-    padding-left:20px;
+ .container .inner .content_m .main_m .shelf .shelf-box-txt li:nth-child(1),.container .inner .content_m .main_m .shelf .shelf-box-txt li:nth-child(2),.container .inner .content_m .main_m .shelf .shelf-box-txt li:nth-child(3) {
+    margin-top:210px;
+} 
+/* 그래놀라, 그래놀라 바 이미지 팝업 */
+.gran-modal { 
+    display:none; 
+    position:absolute; left:0;top:0; z-index:2;
+    width:100%; height:100%;
+    background:rgba(0,0,0,0.7);
+    cursor:pointer;   
 }
-.container> .inner> .content> h2 {
-    padding-bottom:8px;
-    border-bottom:1px solid rgba(99, 55, 26, 0.2);;
-}
-.container> .inner> .content> h3 {
-    padding-top:5px;
-    padding-left:20px;
-}
-.container .inner .content .depth {
-    position:absolute; right:0px;
-    font-size:0.85rem;
+.gran-modal .gran-modal-cont {  
+    position:relative; margin:140px auto;
+    width:60%;
+    border-radius:20px;
+    background:#fff;
 }
 
+
+
+
+
+
+
+
+
+
+/* 마켓오,닥터유,제주용암수
+이미지 하나 있는 페이지 */
+.container .inner .content .brand-cont,
+.container .inner .content .jeju {
+    width:100%;
+    position:relative;
+}
+.container .inner .content .brand-cont img,
+.container .inner .content .jeju img {
+    display:block;
+    position:relative;
+    margin-top:50px;
+    width:70%;
+}
+.container .inner .content .brand-cont .marketO-img__small {
+    width:100%;
+}
+.container .inner .content .brand-cont img:nth-child(2) {
+    margin-top:0;
+}
