--- a/css/subpage.css
+++ b/css/subpage.css
@@ -52,26 +52,20 @@
  .container .inner .snb ul li:first-child {
      margin-top:20px;
  }
-.container .inner .snb ul li:hover { color: coral; }
-.container .inner .snb ul li:hover .snb-list-dep2 { color: black;}
-
 .container .inner .snb ul li .snb-list-dep2 { 
-    outline:0px solid blue;
     width: 100%; height: 40px;
     line-height:40px;
     text-indent:48px;
     background-color:#fff;
  }
  .container .inner .snb ul li:hover .snb-list-dep2:hover { color:coral; }
+ .container .inner .snb ul .selected {
+     background: coral; color:white;
+ }
+ .container .inner .snb ul .selected .snb-list-dep2 a{
+     color:black;
+ }
 
-
-/* snb 사이드 메뉴 - 마켓오 */
-.container .inner .snb ul .snb-list-market:nth-child(2):hover { height:130px; }
-.container .inner .snb ul .snb-list-market:nth-child(3):hover { height:170px; }
-/* snb 사이드메뉴 - 닥터유 */
-.container .inner .snb ul .snb-list-dr:nth-child(2):hover { height:170px; }
-/* snb 사이드메뉴 - 회사소개 */
-.container .inner .snb ul .snb-list-orion:nth-child(1):hover { height:130px; }
 
 /* container 컨테이너 공통 */
 .container .inner .content { outline:0px solid blueviolet;
